Improved the UI

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
 
             </div>
             <form class="chat__controls">
-                <input type="text" name="message" class="chat__input">
+                <div class="chat__input-content">
+                    <input type="text" name="username" placeholder="Escribe tu nombre aquí" class="chat__input" required>
+                    <input type="text" name="message" placeholder="Escribe un mensaje" class="chat__input" required>
+                </div>
                 <button class="chat__btn">Enviar</button>
             </form>
         </section>
